--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Xenon-2",
-  "version": "1.0.0",
+  "name": "Xenon-3.0",
+  "version": "3.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "run": "tsc && node dist/index.js",
