--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "defualt_prefix": "!",
+    "defualt_prefix": "!", //Rainbow Studios - https://discord.gg/Tccx7F7mMj
     "token": "TOKEN HERE"
 }
