--- a/config.json
+++ b/config.json
@@ -1,4 +1,6 @@
 {
-    "defualt_prefix": "!", //Rainbow Studios - https://discord.gg/Tccx7F7mMj
+    "defualt_prefix": "!", 
     "token": "TOKEN HERE"
 }
+//Rainbow Studios - https://discord.gg/Tccx7F7mMj
+//By Tejas Lamba#1924
